--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+  "node": "^18.0.0 || >=19.0.0"
+},
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,6 +16,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
