--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "engines": {
-  "node": "^18.0.0 || >=19.0.0"
-},
-
+    "node": "^18.0.0 || >=19.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -17,7 +16,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
