--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.23.1",
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.0.2",
+    "recharts": "^2.15.1",
     "sweetalert2": "^11.12.1",
     "swiper": "^11.1.4"
   },
