--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.49.2",
     "axios": "^1.7.2",
     "firebase": "^10.12.2",
+    "html-react-parser": "^5.2.2",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -29,7 +30,7 @@
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.0.2",
     "recharts": "^2.15.1",
-    "sweetalert2": "^11.12.1",
+    "sweetalert2": "^11.15.10",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
