--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.12.2",
     "html-react-parser": "^5.2.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
